# cubeit

./: Daanish_test.ipynb  LICENSE  README.md  example.py  gui_notebook.ipynb  notebook 2.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  run_gui.py  setup.py  test.py  testing_DM_class.ipynb
.github/workflows/: docs.yml
cubeit/: DMs.py  __init__.py  gates.py  gates_DMs.py  noise.py  notebook_functions.py  register.py  visualisation.py  visualization.py
docs/: Makefile  README.md  api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  modules.rst  quickstart.rst  tutorial_notebook.ipynb
src/: DM_example.ipynb  Daanish_test.ipynb  example.py  gui_notebook.ipynb  run_gui.py  test.py  testing_DM_class.ipynb
src/cubeit/: DMs.py  README.md  __init__.py  gates.py  gates_DMs.py  noise.py  notebook_functions.py  register.py  visualisation.py  visualization.py
tutorials/: DM_example.ipynb  Visualisation_tools.ipynb
