[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cubeit"                  # Must be unique on PyPI
version = "0.0.3"                # Increment this for new uploads
description = "A visualisation tool for quantum information"
readme = "README.md"             # Path to README
requires-python = ">=3.8"
authors = [{name="Callum, Daanish, Michael, Matthew", email="ucapken@ucl.ac.uk"}]
license = {text="MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [numpy, matplotlib, ipython, voila]
